<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id"></string>
    <string name="parse_client_key"></string>

    <string name="app_name">Tulalens Survey</string>

    <string name="enter_name_below">Please enter the respondent\'s name below</string>
    <string name="action_settings">Settings</string>
    <string name="submit_question">Submit Answer</string>
    <string name="sync_surveys">Sync Surveys</string>
    <string name="return_home">Return home</string>
    <string name="end_survey">End Survey</string>
    <string name="start_new_survey">Start New Survey</string>
    <string name="options">Options</string>
    <string name="sphere">Survey Progress Here</string>
    <string name="edit_last_question">Edit Last Question</string>
    <string name="finished_survey">You\'ve completed the survey!  Please select an option below.</string>
    <string name="refresh_unsynced_responses">Refresh Unsynced Responses</string>

</resources>
