<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="30dp"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:src="@drawable/tl_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/options" />

    <Button
        android:id="@+id/sync_surveys_button"
        android:layout_width="260dp"
        android:layout_height="85dp"
        android:layout_marginBottom="20dp"
        android:textSize="20dp"
        android:text="@string/sync_surveys" />

    <Button
        android:id="@+id/return_home_button"
        android:layout_width="260dp"
        android:layout_height="85dp"
        android:textSize="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/return_home" />

    <Button
        android:id="@+id/refresh_unsynced_responses"
        android:layout_width="260dp"
        android:layout_height="85dp"
        android:textSize="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/refresh_unsynced_responses" />

    <TextView
        android:id="@+id/unsynced_responses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
