<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="30dp"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:src="@drawable/tl_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finished_survey"
        android:textSize="26dp"/>
    
    <Button
        android:id="@+id/go_to_surveys_menu_button"
        android:layout_width="260dp"
        android:layout_height="85dp"
        android:layout_margin="20dp"
        android:textSize="20dp"
        android:text="@string/start_new_survey" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="260dp"
        android:layout_height="85dp"
        android:textSize="20dp"
        android:text="@string/return_home" />

</LinearLayout>
